Fixed nav-ul z-index

--- a/styles/global-styles.css
+++ b/styles/global-styles.css
@@ -5,7 +5,8 @@
 }
 
 *,
-::before {
+::before,
+::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -103,6 +104,7 @@ h5 span {
   position: fixed;
   right: 0;
   top: 0;
+  z-index: 1;
   width: 254px;
   min-height: 100vh;
   padding: 30px 26.5px 34px 32px;
